# OH-Senstive-Flow

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  run.sh
arkanalyzer/: getCFG.ts  getCG.ts  getClass.ts  getField.ts  getFile.ts  getMethod.ts  getNameSpace.ts  package.json  tsconfig.json  tsconfig.main.json
doc/: callgraph_dataflow.md  implementation.md  privacy_report.md  sink_source.md  ui_tree_modules.md  ui_tree_pages_features.md
docs/: overview.md  permission-groundtruth-method.md  permission-report-guide.md  project-overview.md
groundtruth/: groundtruth.txt  测试集groundTruth.docx  测试集groundTruth.txt
groundtruth/permission/: AdsKit.txt  Health_Service_Kit.txt  IntentsKit-codelab-Clientdemo-ArkTS.txt  PaymentKit-CodelabDemo.txt  Pedometer.txt  codeLab_API.txt  (+6 more)
output/: _batch_full_analysis_20260311T183506Z.json  _batch_full_analysis_20260311T184307Z.json
result/: Wechat_HarmonyOS.html  Wechat_HarmonyOS.json  cg.dot
results/: data_flow_results.json  data_flow_visualization.html  harmony_api_results.json  index.html  module_summary.json  report.md
scripts/: analyze_all_apps.sh  eval_permissions.py  eval_sinks.py  gen_permission_groundtruth.py
server/: package.json  tsconfig.json
src/: analyze_harmony_api.py  classify_and_distribute.py  generate_html.sh  generate_privacy_report.py  main.py  privacy_flow_analyzer.py  run.sh  run_pipeline.sh
web/: README.md  package.json
微调数据集/: finetune_data_prep_phase1.py  firstphase.json  fix_firstphase_structure_v2.py  secondPhase.json  数据集介绍.txt
隐私报告覆盖率对比/: 报告覆盖度对比.docx
(+3089 files in other folders)
